# renovate-bump-version-repro

./: README.md  pyproject.toml  renovate.json
