[project]
name = "sample-project"
version = "0.1.0"
description = "Test description"
authors = [
    { name = "Foo Bar", email = "foo@bar" }
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
requests = "2.32.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
